[package]
name = "biras"
version = "0.1.0"
authors = ["Sam Scherf <csmoran@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
imageproc = "0.22.0"
clap = {version = "2.33", features = ["yaml"]}
